manifest/app.rs/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expresscart
  namespace: expresscart
  labels:
    app: expresscart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expresscart
  template:
    metadata:
      labels:
        app: expresscart
        role: frontend
    spec:
      # wait until any one of mongodb replica set started
      containers:
      - name: expresscart
        image: repo.lab/expresscart:1.0.1
        imagePullPolicy: Always
        volumeMounts:
          - name: docker-volume-uploads
            mountPath: /opt/expressCart/public/uploads
          - name: docker-volume-config
            mountPath: /opt/expressCart/config
        ports:
        - containerPort: 1111
      volumes:      
        - name: docker-volume-uploads
          nfs:                                                # Direct using NFS without PersistentVolume and PersistentVolumeClaim
            server: dsm.lab                                   # Worker node nfs-common package required 
            path: /volume2/docker/expressCart/uploads
            readOnly: false
        - name: docker-volume-config
          nfs:
            server: dsm.lab
            path: /volume2/docker/expressCart/config-rs
            readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  name: expresscart-service
  namespace: expresscart
spec:
  selector:
    app: expresscart
  ports:
    - protocol: TCP
      port: 1111
